changed size of house

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header,
 }
 
 .view {
-    background: url("../img/example/P1060750.JPG")no-repeat center center fixed;
+    background: url("../img/house/P1060750-1920.JPG")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
