--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,35 @@ header,
 .ersterartikel {
     margin-top: 80px;
 }
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 55px;
+    right: 20px;
+    z-index: 99; /* Make sure it does not overlap */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 20px; /* Rounded corners */
+    border-width:1px;
+    border-style: double;
+    outline: none;
+    font-size: 18px; /* Increase font size */
+    /* image replacement properties */
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+    background: url(../img/svg/cd-top-arrow-white.svg) no-repeat center 50%;
+    background-color: lightgray;
+    opacity:0.7;
+    filter:alpha(opacity=70);
+    -webkit-transition: opacity .3s 0s, visibility 0s .3s;
+    -moz-transition: opacity .3s 0s, visibility 0s .3s;
+    transition: opacity .3s 0s, visibility 0s .3s
+}
+
+#myBtn:hover {
+    background-color: #E8FFE8;
+    opacity:0.7;
+}
