--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header,
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    background: url(../img/svg/cd-top-arrow-white.svg) no-repeat center 50%;
+    background: url(/img/svg/cd-top-arrow-white.svg) no-repeat center 50%;
     background-color: lightgray;
     opacity:0.7;
     filter:alpha(opacity=70);
