--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,21 @@ header,
     background-color: #E8FFE8;
     opacity:0.7;
 }
+
+@media only screen and (min-width: 0px) {
+    #myBtn {
+        height: 30px;
+        width: 30px;
+        right: 47%;
+        bottom: 2px;
+
+    }
+}
+@media only screen and (min-width: 1024px) {
+    #myBtn {
+        height: 40px;
+        width: 40px;
+        right: 30px;
+        bottom: 30px;
+    }
+}
