--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@
 
 html,
 body,
-header,
-.view {
-    height: 100%;
+header {
+    height: 90%;
 }
 
 .view {
-    background: url("../img/house/P1060750-1920-1.jpg")no-repeat center center fixed;
+    background: url("../img/house/P1060750-1920-1.jpg")no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: 86%;
 }
 
 .flex-fill {
@@ -45,7 +45,7 @@ header,
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    background: url(/img/svg/cd-top-arrow-white.svg) no-repeat center 50%;
+    background: url(img/svg/cd-top-arrow-white.svg) no-repeat center 50%;
     background-color: lightgray;
     opacity:0.7;
     filter:alpha(opacity=70);
